[project]
name = "finance-tracker"
version = "0.1.0"
description = "A command-line personal finance tracker"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
finance = "finance_tracker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_tracker"]
